# aaiob

./: .gitignore  Cargo.toml  LICENSE  shell.nix
src/: error.rs  lib.rs  logger.rs  main.rs
src/widgets/: mod.rs
src/widgets/generic/: button.rs  label.rs  mod.rs
